objects/vlocity_cmt__QuoteMember__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__Address1__c</fullName>
        <description>Additional address information - 1.</description>
        <label>Street Supplement 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AddressValidationDate__c</fullName>
        <description>The field is used to store the date when address is validated using external system.</description>
        <label>Address Validation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AddressValidationMessage__c</fullName>
        <description>The field is used to store validation messages after address validation (ex: Address Not Found/Alternate Address Found).</description>
        <label>Address Validation Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AddressValidationResult__c</fullName>
        <description>The field stores the outcome of validation of address from external system.</description>
        <label>Address Validation Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Fails</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncOperationStatus__c</fullName>
        <description>Stores status of the last asynchronous operation run on this member.</description>
        <label>Async Operation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Succeeded</fullName>
                    <default>true</default>
                    <label>Succeeded</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncOperation__c</fullName>
        <description>This stores the asynchronous operation name if this member locked for asynchronous operation.</description>
        <label>Async Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apply To Group</fullName>
                </value>
                <value>
                    <fullName>Price And Validate</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Validate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BroadbandConnectionType__c</fullName>
        <description>Derived from the Serviceability Data JSON</description>
        <label>Broadband Connection Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__City__c</fullName>
        <description>City name information.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ConnectDate__c</fullName>
        <description>Needed to let the User optionally introduce the Connect Date or users can map the value from Quote Line Item.</description>
        <label>Connect Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Country__c</fullName>
        <description>Country name information.</description>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Email__c</fullName>
        <description>Email information.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FirstName__c</fullName>
        <description>First name information.</description>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastName__c</fullName>
        <description>Last name information.</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LockedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates if a quote member locked by a user.</description>
        <label>Locked By User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Quote Members</relationshipLabel>
        <relationshipName>QuoteMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LockedFor__c</fullName>
        <description>This stores the reason for doing lock on quote member.</description>
        <label>Locked For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Async Operation</fullName>
                </value>
                <value>
                    <fullName>Manual Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MSISDN__c</fullName>
        <description>MSISDN information.</description>
        <externalId>true</externalId>
        <label>MSISDN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MaxDownloadSpeed__c</fullName>
        <description>Derived from the Serviceability Data JSON</description>
        <label>Max Download Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MaxUploadSpeed__c</fullName>
        <description>Derived from the Serviceability Data JSON</description>
        <label>Max Upload Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MemberData__c</fullName>
        <description>Member Data information.</description>
        <label>Member Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MemberType__c</fullName>
        <description>This store developer name of CPQ Member Type custom metadata.</description>
        <label>Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ServicePoint</fullName>
                    <label>Service Point</label>
                </value>
                <value>
                    <fullName>Premises</fullName>
                </value>
                <value>
                    <fullName>ServiceAccount</fullName>
                    <label>Service Account</label>
                </value>
                <value>
                    <fullName>SubscriberAccount</fullName>
                    <label>Subscriber</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityMemberId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to the corresponding Opportunity Member record</description>
        <label>Opportunity Member</label>
        <referenceTo>vlocity_cmt__OpportunityMember__c</referenceTo>
        <relationshipLabel>Quote Members</relationshipLabel>
        <relationshipName>QuoteMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PostalCode__c</fullName>
        <description>Postal code of the address</description>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to premises.</description>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Quote Members</relationshipLabel>
        <relationshipName>QuoteMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Group to which the service point associated with this quote is linked.</description>
        <label>Quote Group</label>
        <referenceTo>vlocity_cmt__QuoteGroup__c</referenceTo>
        <relationshipLabel>Quote Members</relationshipLabel>
        <relationshipName>QuoteMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteId__c</fullName>
        <description>This indicate parent quote of this record.</description>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Members</relationshipLabel>
        <relationshipName>QuoteMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SelectedAssetIds__c</fullName>
        <description>selected asset ids (separted by comma) belong to this member.</description>
        <label>Selected Assets</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account with record type Service that identifies the service location.</description>
        <label>Service Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quote Members</relationshipLabel>
        <relationshipName>QuoteMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServicePointId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to service point.</description>
        <label>Service Point</label>
        <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
        <relationshipLabel>Quote Members</relationshipLabel>
        <relationshipName>QuoteMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceabilityData__c</fullName>
        <description>Serviceability Data information.</description>
        <label>Serviceability Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceabilityLastCheckedDate__c</fullName>
        <description>The field is store when the serviceability check was done last time.</description>
        <label>Serviceability Last Checked At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__State__c</fullName>
        <description>State name information.</description>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StreetAddress__c</fullName>
        <description>Street address information.</description>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Title__c</fullName>
        <description>Title information.</description>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Quote Member</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>